--- a/package.json
+++ b/package.json
@@ -8,26 +8,41 @@
         "watch": "webpack --watch"
     },
     "dependencies": {
+        "@babel/plugin-syntax-flow": "^7.14.5",
+        "@babel/plugin-transform-runtime": "^7.15.8",
+        "@babel/preset-env": "^7.15.8",
+        "@babel/preset-react": "^7.14.5",
+        "@babel/preset-typescript": "^7.15.0",
         "@bem-react/classname": "^1.5.12",
         "axios": "^0.23.0",
+        "babel-core": "^6.26.3",
+        "babel-jest": "^27.3.1",
+        "babel-preset-env": "^1.7.0",
         "bootstrap": "^5.1.3",
         "chai": "^4.3.4",
         "express": "^4.17.1",
         "faker": "^5.5.3",
+        "fetch-mock": "^9.11.0",
         "immer": "^9.0.6",
+        "jest-localstorage-mock": "^2.4.18",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-helmet": "^6.1.0",
         "react-redux": "^7.2.5",
         "react-router": "^5.2.1",
         "react-router-dom": "^5.3.0",
+        "react-test-renderer": "^17.0.2",
         "redux": "^4.1.1",
         "redux-observable": "^2.0.0",
-        "rxjs": "^7.4.0"
+        "rxjs": "^7.4.0",
+        "ts-jest": "^27.0.7"
     },
     "devDependencies": {
+        "@babel/plugin-transform-modules-commonjs": "^7.15.4",
+        "@testing-library/react": "^12.1.2",
         "@types/express": "^4.17.13",
         "@types/faker": "^5.5.9",
+        "@types/jest": "^27.0.2",
         "@types/mini-css-extract-plugin": "^2.3.0",
         "@types/node": "^16.11.1",
         "@types/react": "^17.0.30",
@@ -35,12 +50,14 @@
         "@types/react-helmet": "^6.1.4",
         "@types/react-router": "^5.1.17",
         "@types/react-router-dom": "^5.3.1",
+        "@types/react-test-renderer": "^17.0.1",
         "@types/webpack": "^5.28.0",
         "css-loader": "^6.3.0",
         "html-webpack-plugin": "^5.3.2",
         "jest": "^27.3.0",
         "mini-css-extract-plugin": "^2.4.2",
         "nodemon": "^2.0.13",
+        "redux-mock-store": "^1.5.4",
         "sass": "^1.42.1",
         "sass-loader": "^12.1.0",
         "style-loader": "^3.3.0",
