--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "fetch-mock": "^9.11.0",
         "immer": "^9.0.6",
         "jest-localstorage-mock": "^2.4.18",
+        "png-img": "^3.3.1",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-helmet": "^6.1.0",
@@ -53,6 +54,7 @@
         "@types/react-test-renderer": "^17.0.1",
         "@types/webpack": "^5.28.0",
         "css-loader": "^6.3.0",
+        "hermione": "^4.0.0-alpha.9",
         "html-webpack-plugin": "^5.3.2",
         "jest": "^27.3.0",
         "mini-css-extract-plugin": "^2.4.2",
